Presence create & read

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,11 @@
           "App\\": "app/",
           "Database\\Factories\\": "database/factories/",
           "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/const.php",
+            "app/global_functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
