--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "@nuxtjs/router": "^1.5.0",
+    "@nuxtjs/sentry": "^5.0.3",
+    "@sentry/tracing": "^6.2.5",
+    "@sentry/vue": "^6.2.5",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
