--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "sentry/sentry-laravel": "^2.4",
+        "spatie/laravel-permission": "^4.0",
         "tymon/jwt-auth": "^1.0.1"
     },
     "require-dev": {
