--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "node-sass": "^5.0.0",
