fix docker-composer file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,17 @@ services:
         - .:/application
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
 
+    nuxt:
+      image: node:10.20
+      restart: unless-stopped
+      ports:
+        - "9023:3000"
+      working_dir: /src
+      volumes:
+        - .:/src
+      command:
+        "/bin/sh -c 'npm install && npm run build && npm run start'"
+
     minio1:
       image: minio/minio
       restart: always
@@ -48,8 +59,8 @@ services:
       ports:
         - "9005:9000"
       environment:
-        MINIO_ACCESS_KEY: LOP1235123
-        MINIO_SECRET_KEY: KOI10239QW342
+        MINIO_ACCESS_KEY: POW1235123
+        MINIO_SECRET_KEY: GOI102398op213
       command: server /data
       healthcheck:
         test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
@@ -64,15 +75,5 @@ services:
         - ./data:/var/www:ro
       ports:
         - "9006:9006"
-        
-    nuxt:
-      image: node:12.10
-      restart: unless-stopped
-      ports:
-        - "9023:3000"
-      working_dir: /src
-      volumes:
-        - .:/src
-      command:
-        "/bin/sh -c 'yarn && yarn build && yarn start'"
+    
       
