--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME="Laravel Nuxt"
+APP_NAME="ERP Nuxt"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000
+API_URL=http://localhost:8000/api
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
