--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -1,12 +1,9 @@
 FROM phpdockerio/php74-fpm:latest
 WORKDIR "/application"
 
-# Fix debconf warnings upon build
-ARG DEBIAN_FRONTEND=noninteractive
-
 # Install selected extensions and other stuff
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install  php7.4-mysql php7.4-redis php7.4-bcmath php7.4-bz2 php7.4-gd php7.4-odbc \
+    && apt-get -y --no-install-recommends install  php7.4-bcmath php7.4-bz2 php7.4-gd php7.4-mysql php7.4-odbc php7.4-redis \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Install git
